--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.12.3",
     "nconf": "^0.7.1",
-    "pg": "^4.3.0"
+    "pg": "^4.3.0",
+    "simple-oauth2": "^0.2.1"
   }
 }
